<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".tablero">

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TRIKI"
        android:textColor="@color/colorYello"
        android:textSize="70sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tablero"
        android:layout_width="332dp"
        android:layout_height="351dp"
        android:contentDescription="@string/tablero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/tablero2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="77dp"
        android:layout_height="99dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/casilla2"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="136dp"
        android:layout_height="96dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/casilla8"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/casilla4"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/casilla3"
        android:layout_width="75dp"
        android:layout_height="108dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="136dp"
        android:layout_height="96dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="77dp"
        android:layout_height="99dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="77dp"
        android:layout_height="99dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="77dp"
        android:layout_height="99dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="136dp"
        android:layout_height="96dp"
        android:background="#00FFFFFF"
        android:onClick="handleBtn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/casilla6"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/casilla7"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/casilla1"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/casilla5"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/casilla0"
        android:layout_width="72dp"
        android:layout_height="101dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/casilla0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/counterCircle"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/counterCruz"
        app:layout_constraintTop_toBottomOf="@+id/tablero"
        tools:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/counterCruz"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/x"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablero" />

    <TextView
        android:id="@+id/txtCounterCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorep2"
        android:textColor="#020202"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterCircle" />

    <TextView
        android:id="@+id/txtCounterCurz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorep1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterCruz" />

    <Button
        android:id="@+id/reset"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:onClick="handleButtonReset"
        android:text="resetear"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/menu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:onClick="handleButtonMenu"
        android:text="Regresar"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        app:rippleColor="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>